@@ -19,6 +19,11 @@
 # along with lsp-common-lib.  If not, see <https://www.gnu.org/licenses/>.
 #
 
+# Command-line flag to silence nested $(MAKE).
+ifneq ($(VERBOSE),1)
+.SILENT:
+endif
+
 # Location
 BASEDIR                    := $(CURDIR)
 MODULES                    := $(BASEDIR)/modules
@@ -44,76 +49,76 @@ DISTSRC                     = $(DISTSRC_PATH)/$(ARTIFACT_NAME)
 .PHONY: all compile install uninstall depend clean
 
 compile all install uninstall depend:
-	@$(CHK_CONFIG)
-	@$(MAKE) -s -C "$(BASEDIR)/src" $(@) CONFIG="$(CONFIG)" DESTDIR="$(DESTDIR)"
+	$(CHK_CONFIG)
+	$(MAKE) -C "$(BASEDIR)/src" $(@) VERBOSE="$(VERBOSE)" CONFIG="$(CONFIG)" DESTDIR="$(DESTDIR)"
 
 clean:
-	@echo "Cleaning build directory $(BUILDDIR)"
-	@-rm -rf $(BUILDDIR)
-	@echo "Clean OK"
+	echo "Cleaning build directory $(BUILDDIR)"
+	-rm -rf $(BUILDDIR)
+	echo "Clean OK"
 	
 # Module-related tasks
 .PHONY: fetch tree prune
 fetch:
-	@$(CHK_CONFIG)
-	@echo "Fetching desired source code dependencies"
-	@$(MAKE) -s -f "$(BASEDIR)/make/modules.mk" $(@) BASEDIR="$(BASEDIR)" CONFIG="$(CONFIG)"
-	@echo "Fetch OK"
+	$(CHK_CONFIG)
+	echo "Fetching desired source code dependencies"
+	$(MAKE) -f "$(BASEDIR)/make/modules.mk" $(@) VERBOSE="$(VERBOSE)" BASEDIR="$(BASEDIR)" CONFIG="$(CONFIG)"
+	echo "Fetch OK"
 	
 tree:
-	@echo "Fetching all possible source code dependencies"
-	@$(MAKE) -s -f "$(BASEDIR)/make/modules.mk" $(@) BASEDIR="$(BASEDIR)" TREE="1"
-	@echo "Fetch OK"
+	echo "Fetching all possible source code dependencies"
+	$(MAKE) -f "$(BASEDIR)/make/modules.mk" $(@) VERBOSE="$(VERBOSE)" BASEDIR="$(BASEDIR)" TREE="1"
+	echo "Fetch OK"
 
 prune: clean
-	@echo "Pruning the whole project tree"
-	@$(MAKE) -s -f "$(BASEDIR)/make/modules.mk" prune BASEDIR="$(BASEDIR)" CONFIG="$(CONFIG)"
-	@$(MAKE) -s -f "$(BASEDIR)/make/modules.mk" prune BASEDIR="$(BASEDIR)" TREE="1"
-	@-rm -rf "$(CONFIG)"
-	@echo "Prune OK"
+	echo "Pruning the whole project tree"
+	$(MAKE) -f "$(BASEDIR)/make/modules.mk" prune VERBOSE="$(VERBOSE)" BASEDIR="$(BASEDIR)" CONFIG="$(CONFIG)"
+	$(MAKE) -f "$(BASEDIR)/make/modules.mk" prune VERBOSE="$(VERBOSE)" BASEDIR="$(BASEDIR)" TREE="1"
+	-rm -rf "$(CONFIG)"
+	echo "Prune OK"
 
 # Configuration-related targets
 .PHONY: config help chkconfig
 
 testconfig:
-	@$(MAKE) -s -f "$(BASEDIR)/make/configure.mk" $(@) CONFIG="$(CONFIG)" TEST="1" $(MAKEFLAGS)
+	$(MAKE) -f "$(BASEDIR)/make/configure.mk" $(@) VERBOSE="$(VERBOSE)" CONFIG="$(CONFIG)" TEST="1" -$(MAKEFLAGS)
 
 config:
-	@$(MAKE) -s -f "$(BASEDIR)/make/configure.mk" $(@) CONFIG="$(CONFIG)" $(MAKEFLAGS)
+	$(MAKE) -f "$(BASEDIR)/make/configure.mk" $(@) VERBOSE="$(VERBOSE)" CONFIG="$(CONFIG)" -$(MAKEFLAGS)
 
 # Release-related targets
 .PHONY: distsrc
 distsrc:
-	@echo "Building source code archive"
-	@mkdir -p "$(DISTSRC)/modules"
-	@$(MAKE) -s -f "$(BASEDIR)/make/modules.mk" tree BASEDIR="$(BASEDIR)" MODULES="$(DISTSRC)/modules" TREE="1"
-	@cp -R $(BASEDIR)/include $(BASEDIR)/make $(BASEDIR)/src "$(DISTSRC)/"
-	@cp $(BASEDIR)/CHANGELOG $(BASEDIR)/COPYING* $(BASEDIR)/Makefile $(BASEDIR)/*.mk "$(DISTSRC)/"
-	@find "$(DISTSRC)" -iname '.git' | xargs -exec rm -rf {}
-	@find "$(DISTSRC)" -iname '.gitignore' | xargs -exec rm -rf {}
-	@tar -C $(DISTSRC_PATH) -czf "$(BUILDDIR)/$(ARTIFACT_NAME)-$(ARTIFACT_VERSION)-src.tar.gz" "$(ARTIFACT_NAME)"
-	@echo "Created archive: $(BUILDDIR)/$(ARTIFACT_NAME)-$(ARTIFACT_VERSION)-src.tar.gz"
-	@ln -sf "$(ARTIFACT_NAME)-$(ARTIFACT_VERSION)-src.tar.gz" "$(BUILDDIR)/$(ARTIFACT_NAME)-src.tar.gz"
-	@echo "Created symlink: $(BUILDDIR)/$(ARTIFACT_NAME)-src.tar.gz"
-	@rm -rf $(DISTSRC_PATH)
-	@echo "Build OK"
+	echo "Building source code archive"
+	mkdir -p "$(DISTSRC)/modules"
+	$(MAKE) -f "$(BASEDIR)/make/modules.mk" tree BASEDIR="$(BASEDIR)" MODULES="$(DISTSRC)/modules" TREE="1"
+	cp -R $(BASEDIR)/include $(BASEDIR)/make $(BASEDIR)/src "$(DISTSRC)/"
+	cp $(BASEDIR)/CHANGELOG $(BASEDIR)/COPYING* $(BASEDIR)/Makefile $(BASEDIR)/*.mk "$(DISTSRC)/"
+	find "$(DISTSRC)" -iname '.git' | xargs -exec rm -rf {}
+	find "$(DISTSRC)" -iname '.gitignore' | xargs -exec rm -rf {}
+	tar -C $(DISTSRC_PATH) -czf "$(BUILDDIR)/$(ARTIFACT_NAME)-$(ARTIFACT_VERSION)-src.tar.gz" "$(ARTIFACT_NAME)"
+	echo "Created archive: $(BUILDDIR)/$(ARTIFACT_NAME)-$(ARTIFACT_VERSION)-src.tar.gz"
+	ln -sf "$(ARTIFACT_NAME)-$(ARTIFACT_VERSION)-src.tar.gz" "$(BUILDDIR)/$(ARTIFACT_NAME)-src.tar.gz"
+	echo "Created symlink: $(BUILDDIR)/$(ARTIFACT_NAME)-src.tar.gz"
+	rm -rf $(DISTSRC_PATH)
+	echo "Build OK"
 
 # Help
 help:
-	@echo "Available targets:"
-	@echo "  all                       Build all binaries"
-	@echo "  clean                     Clean all build files and configuration file"
-	@echo "  config                    Configure build"
-	@echo "  depend                    Update build dependencies for current project"
-	@echo "  distsrc                   Make tarball with source code for packagers"
-	@echo "  fetch                     Fetch all desired source code dependencies from git"
-	@echo "  help                      Print this help message"
-	@echo "  info                      Output build configuration"
-	@echo "  install                   Install all binaries into the system"
-	@echo "  prune                     Cleanup build and all fetched dependencies from git"
-	@echo "  tree                      Fetch all possible source code dependencies from git"
-	@echo "                            to make source code portable between machines"
-	@echo "  uninstall                 Uninstall binaries"
-	@echo ""
-	@$(MAKE) -s -f "$(BASEDIR)/make/configure.mk" $(@)
-	@echo ""
+	echo "Available targets:"
+	echo "  all                       Build all binaries"
+	echo "  clean                     Clean all build files and configuration file"
+	echo "  config                    Configure build"
+	echo "  depend                    Update build dependencies for current project"
+	echo "  distsrc                   Make tarball with source code for packagers"
+	echo "  fetch                     Fetch all desired source code dependencies from git"
+	echo "  help                      Print this help message"
+	echo "  info                      Output build configuration"
+	echo "  install                   Install all binaries into the system"
+	echo "  prune                     Cleanup build and all fetched dependencies from git"
+	echo "  tree                      Fetch all possible source code dependencies from git"
+	echo "                            to make source code portable between machines"
+	echo "  uninstall                 Uninstall binaries"
+	echo ""
+	$(MAKE) -f "$(BASEDIR)/make/configure.mk" $(@)
+	echo ""
