@@ -228,22 +228,22 @@ COMMON_VARS = \
 .PHONY: sysvars
 
 sysvars:
-	@echo "List of available system variables:"
-	@echo "  ARCHITECTURE              target architecture to perform build"
-	@echo "  ARCHITECTURE_CFLAGS       compiler flags to specify architecture"
-	@echo "  BINDIR                    location of the binaries"
-	@echo "  DEBUG                     build with debug options"
-	@echo "  EXECUTABLE_EXT            file extension for executable files"
-	@echo "  INCDIR                    location of the header files"
-	@echo "  LIBDIR                    location of the library"
-	@echo "  LIBRARY_EXT               file extension for library files"
-	@echo "  LIBRARY_PREFIX            prefix used for library file"
-	@echo "  PKGCONFIG_EXT             file extension for pkgconfig files"
-	@echo "  PLATFORM                  target software platform to perform build"
-	@echo "  PREFIX                    installation prefix for binary files"
-	@echo "  PROFILE                   build with profile options"
-	@echo "  STATICLIB_EXT             file extension for static library files"
-	@echo "  TEMPDIR                   location of temporary directory"
-	@echo "  TEST                      use test build"
-	@echo "  TRACE                     compile with additional trace information output"
+	echo "List of available system variables:"
+	echo "  ARCHITECTURE              target architecture to perform build"
+	echo "  ARCHITECTURE_CFLAGS       compiler flags to specify architecture"
+	echo "  BINDIR                    location of the binaries"
+	echo "  DEBUG                     build with debug options"
+	echo "  EXECUTABLE_EXT            file extension for executable files"
+	echo "  INCDIR                    location of the header files"
+	echo "  LIBDIR                    location of the library"
+	echo "  LIBRARY_EXT               file extension for library files"
+	echo "  LIBRARY_PREFIX            prefix used for library file"
+	echo "  PKGCONFIG_EXT             file extension for pkgconfig files"
+	echo "  PLATFORM                  target software platform to perform build"
+	echo "  PREFIX                    installation prefix for binary files"
+	echo "  PROFILE                   build with profile options"
+	echo "  STATICLIB_EXT             file extension for static library files"
+	echo "  TEMPDIR                   location of temporary directory"
+	echo "  TEST                      use test build"
+	echo "  TRACE                     compile with additional trace information output"
 
