@@ -118,18 +118,18 @@ TOOL_VARS := \
 
 .PHONY: toolvars
 toolvars:
-	@echo "List of tool variables:"
-	@echo "  AR                        Archiver tool"
-	@echo "  AS                        Assembler tool"
-	@echo "  CC                        C compiler execution command line"
-	@echo "  CFLAGS                    C compiler build flags"
-	@echo "  CXX                       C++ compiler execution command line"
-	@echo "  CXXFLAGS                  C++ compiler build flags"
-	@echo "  EXE_FLAGS                 Flags to link executable files"
-	@echo "  GIT                       The name of the Git version control tool"
-	@echo "  INCLUDE                   Additional paths for include files"
-	@echo "  LD                        Linker execution command line"
-	@echo "  LDFLAGS                   Linker flags for merging object files"
-	@echo "  SO_FLAGS                  Flags to link shared object/library files"
-	@echo ""
+	echo "List of tool variables:"
+	echo "  AR                        Archiver tool"
+	echo "  AS                        Assembler tool"
+	echo "  CC                        C compiler execution command line"
+	echo "  CFLAGS                    C compiler build flags"
+	echo "  CXX                       C++ compiler execution command line"
+	echo "  CXXFLAGS                  C++ compiler build flags"
+	echo "  EXE_FLAGS                 Flags to link executable files"
+	echo "  GIT                       The name of the Git version control tool"
+	echo "  INCLUDE                   Additional paths for include files"
+	echo "  LD                        Linker execution command line"
+	echo "  LDFLAGS                   Linker flags for merging object files"
+	echo "  SO_FLAGS                  Flags to link shared object/library files"
+	echo ""
 
